plugins {
    id "java-library"
}

java {
    sourceCompatibility = JavaVersion.VERSION_11
    targetCompatibility = JavaVersion.VERSION_11
}
compileJava.options.encoding = "UTF-8"
compileTestJava.options.encoding = "UTF-8"

dependencies {
    implementation "com.google.guava:guava:33.2.1-jre"
    implementation "com.squareup.okhttp3:okhttp:4.9.3"

    testImplementation "org.mutabilitydetector:MutabilityDetector:0.10.3"
    testImplementation(platform("org.junit:junit-bom:5.11.2"))

}

testing {
    suites {
        test {
            useJUnitJupiter()
        }
    }
}

repositories {
    mavenCentral()
}